# THP-TCP

./: .gitignore  Cargo.toml  README.md
.codex_backups/nickname_spec/: THP-TCP-Nickname-Addressing-v1.0.md.20260119_074304  thp-tcp-nickname-fields-v1.0.json.20260119_074304
Olds/: .gitattributes  CONTRIBUTING.md  KAIRO-SEC.txt  README.md  archive_cli_files.py  auto_ops.ps1  build_all.py  check_rfc_numbers.py  check_semantics.py  check_yaml_structure.py  cli_sprint_report.md  commit_message.txt  conftest.py  dispatcher.py  export_mermaid.py  extract_mermaid_blocks.py  file_structure.txt  gen_dmc_yaml.py  gen_link_map.go  gen_mermaid_from_html.py  gen_mermaid_from_md.py  gen_yaml_from_html.py  generate_md_toc.py  generate_new_task.py  generate_rfc_index.py  generate_rfc_index_html.py  generate_rfc_readme.py  generate_rfc_toc.py  generate_simple_yaml_doc.py  generate_task_log_markdown.py  generate_yaml_schema_doc.py  get_file_structure.py  go.mod  main.py  markdown_to_yaml.py  organize_tools.ps1  repository_analysis_report.md  requests.py  requirements.txt  run_task_workflow.py  (+18 more)
Olds/.cargo/: config.toml
Olds/AI-TCP_Structure/: link_map.json
Olds/ai_tcp_tasks/: ai_tcp_dmc_replay_codegen.yaml
Olds/analysis/: ai_tcp_rfc_draft_structure.md
Olds/cli_archives/: TaskValidation_20250629_034849.txt  output_20250629_034849.json  (+15 more)
Olds/src/api_server/: Cargo.toml  api_server.rs  main.rs
Olds/src/cli/: Cargo.toml  agent_revoke.rs  agent_setup.rs  build.rs  packet_log.rs  packet_receive.rs  packet_send.rs
Olds/src/utils/: Cargo.toml  build.rs  crypto.rs  lib.rs  packet.rs
logs/: flux-zen-talk-log.txt
(+415 files in other folders)
