[package]
name = "ai-tcp-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
flatbuffers = "=25.2.10"

[build-dependencies]
flatbuffers-build = "=0.2.2"
ai-tcp-utils = { path = "../utils" }



[[bin]]
name = "aictp-agent-setup"
path = "agent_setup.rs"

[[bin]]
name = "aictp-send"
path = "packet_send.rs"

[[bin]]
name = "aictp-receive"
path = "packet_receive.rs"

[[bin]]
name = "aictp-log"
path = "packet_log.rs"

[[bin]]
name = "aictp-revoke"
path = "agent_revoke.rs"
