[package]
name = "ai-tcp-utils"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
rand = "0.8"
rand_core = "0.6"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
flatbuffers = "=25.2.10"

[build-dependencies]
flatbuffers-build = "=0.2.2"